# flask-meme-viewer

./: README.md  pyproject.toml
flask_meme_viewer/: Dockerfile  app.py  gunicorn.conf.py  requirements.txt
flask_meme_viewer/templates/: details.html  index.html
